Closed Bug 345400 Opened 19 years ago Closed 19 years ago

Password manager can't handle case insensitive user field names imported from IE

Categories

(Toolkit :: Password Manager, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.8.1beta2

People

(Reporter: mwu, Assigned: mwu)

Details

(Keywords: fixed1.8.1)

Attachments

(1 file)

Our username field matching is case sensitive. IE's password manager saves its username fields as lowercase. Thus, sites like bugzilla which have uppercase characters in the field name cannot use logins imported from IE.
This patch detects IE passwords by checking for an empty password field name if the username field does not match. It then does a case insensitive search for the username field and updates that if located. It also updates the password field after locating that. The signon updates do not save at this point merely because they are used to prevent the password manager from prompting the user if he/she wishes to save the password later in Notify().
Attachment #230060 - Flags: review?(enndeakin)
Comment on attachment 230060 [details] [diff] [review] Handle passwords imported from IE better >+ if ((e->passField).IsEmpty()) >+ passField->GetName(e->passField); Does this change the stored password field name and save it? Patch looks OK
Attachment #230060 - Flags: review?(enndeakin) → review+
(In reply to comment #2) > Does this change the stored password field name and save it? > It updates the password field name in memory but it doesn't save it to disk until the user decides to submit the form. The updating is primarily done to avoid asking the user if he/she wishes to save the password later.
Whiteboard: [checkin needed]
Checking in nsPasswordManager.cpp; /cvsroot/mozilla/toolkit/components/passwordmgr/base/nsPasswordManager.cpp,v <- - nsPasswordManager.cpp new revision: 1.84; previous revision: 1.83 done Checked into trunk.
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Whiteboard: [checkin needed]
Comment on attachment 230060 [details] [diff] [review] Handle passwords imported from IE better This patch adds code that handles a condition which we couldn't handle before. It should be fairly safe to put on branch.
Attachment #230060 - Flags: approval1.8.1?
Comment on attachment 230060 [details] [diff] [review] Handle passwords imported from IE better a=drivers. Please land on MOZILLA_1_8_BRANCH.
Attachment #230060 - Flags: approval1.8.1? → approval1.8.1+
Whiteboard: [checkin needed (1.8 branch)]
mozilla/toolkit/components/passwordmgr/base/nsPasswordManager.cpp 1.65.2.9
Keywords: fixed1.8.1
Whiteboard: [checkin needed (1.8 branch)]
Target Milestone: --- → Firefox 2 beta2
Product: Firefox → Toolkit
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: