Bug 345400 - Password manager can't handle case insensitive user field names imported from IE, patch by Michael Wu, r=enndeakin